--- a/templates/hosted.html
+++ b/templates/hosted.html
@@ -11,14 +11,20 @@
         <td><input type="text" name="first_name" /></td><br>
         <label>Last Name</label>
         <td><input type="text" name="last_name" /></td><br>
+        <label>Age</label>
+        <td><input type="number" name="age" min="1" max="100" /></td><br>
         <label>Country of Origin</label>
         <td><input type="text" name="country_of_origin" /></td><br>
         <label>City of Residence</label>
         <td><input type="text" name="city_of_residence" /></td><br>
         <label>Number of Guests</label>
         <td><input type="number" name="number_of_guests" min="1" max="10" /></td><br>
-
-
+        <label>Kosher</label>
+        <td><input type="radio" name="kosher" value="yes" />Yes</td>
+        <td><input type="radio" name="kosher" value="no" />No</td><br>
+        <label>Kosher</label>
+        <td><input type="radio" name="kosher" value="yes" />Yes</td>
+        <td><input type="radio" name="kosher" value="no" />No</td><br>
 
       </form>
     </div>
