--- a/templates/host.html
+++ b/templates/host.html
@@ -5,6 +5,36 @@
     <title>Host</title>
 </head>
 <body>
+    <div class="form-container">
+        <form>
+          <label>First Name:</label>
+          <input type="text" name="first_name" /><br>
+          <label>Last Name:</label>
+          <input type="text" name="last_name" /><br>
+          <label>Age:</label>
+          <input type="number" name="age" min="1" max="100" /><br>
+          <label>Country of Origin:</label>
+          <input type="text" name="country_of_origin" /><br>
+          <label>City of Residence:</label>
+          <input type="text" name="city_of_residence" /><br>
+          <label>Address:</label>
+          <input type="text" name="address" /><br>
+          <label>Number of Hosts:</label>
+          <input type="number" name="number_of_hosts" min="1" max="10" /><br>
+          <label>Maximum Number of Guests:</label>
+          <input type="number" name="number_of_guests" min="1" max="10" /><br>
+          <label>Kosher:</label>
+          <input type="radio" name="kosher" value="yes" />Yes
+          <input type="radio" name="kosher" value="no" />No<br>
+          <label>Vegetarian/Vegan:</label>
+          <input type="radio" name="vegan" value="yes" />Yes
+          <input type="radio" name="vegan" value="no" />No<br>
+          <label>Meal Date</label>
+          <input type="date" name="meal_date"><br>
+          <label>Meal Time</label>
+          <input type="time" name="meal_time">
+        </form>
+      </div>
 
 </body>
 </html>
