--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../static/css/style.css">
-
+    <link rel="stylesheet" href="../static/css/slideshow.css">
+    
     <title>Document</title>
 </head>
 
@@ -14,7 +15,7 @@
     <div class="container">
         <div class="header">
             <div class="logo">
-                <img src="" alt="">
+                <img src="" alt="settler logo">
             </div>
             <div class="header_text">
                 <h2>motto</h2>
@@ -28,19 +29,19 @@
         <div class="slideshow-container">
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="img1.jpg" style="width:100%">
+                <img src="img1.jpg" alt="slide one" style="width:100%">
                 <div class="text">Caption Text</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
-                <img src="img2.jpg" style="width:100%">
+                <img src="img2.jpg" alt="slide two" style="width:100%">
                 <div class="text">Caption Two</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
-                <img src="img3.jpg" style="width:100%">
+                <img src="img3.jpg" alt="slide three" style="width:100%">
                 <div class="text">Caption Three</div>
             </div>
 
@@ -65,9 +66,9 @@
 
         </div>
         <footer>
-            
+            FOOTER
         </footer>
     </div>
 </body>
-
+    <script src="{{url_for('static' , filename= 'js/slideshow.js')}}"></script>
 </html>
