--- a/templates/host.html
+++ b/templates/host.html
@@ -22,7 +22,7 @@
           <label>Maximum Number of Guests:</label>
           <input type="number" name="number_of_guests" min="1" max="10" /><br>
           <label>Meal Type</label> 
-    <select multiple name="food_preference"">
+    <select multiple name="food_preference">
             <option  value="fish">Fish</option >
             <option  value="meat">Meat</option >
             <option  value="milk">Milk</option >
