welcome page structure

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -5,6 +5,170 @@
     <title>Title</title>
 </head>
 <body>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Welcome</title>
+    
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:100,400,500,600,700&display=swap" rel="stylesheet">
+    
+        <!-- CSS -->
+        <link rel="stylesheet" href="../static/css/style.css">
+    
+        <!-- Font Awesome -->
+        <script src="https://kit.fontawesome.com/f26da25149.js" crossorigin="anonymous"></script>
+    
+    </head>
+    
+    <body>
+    
+        <!-- 1. Navigation / Header Bar -->
 
+    <div class="container">
+        <nav class="nav-header">
+      
+            <div class="nav-sub-container nav-list ">
+                <a class="nav-links" href="https://www.apple.com/mac/" target="_blank">Home</a>
+                <a class="nav-links" href="https://www.apple.com/ipad/" target="_blank">About</a>
+                <a class="nav-links" href="https://www.apple.com/iphone/" target="_blank">Forum</a>
+                <a class="nav-links" href="https://www.apple.com/watch/" target="_blank">FAQ</a>
+                <a class="nav-links" href="https://www.apple.com/tv/" target="_blank">Contact</a>
+            </div>
+          
+        </nav>
+    
+   
+        <div class="landing_message border">
+            <div>
+                <h1 class="landing_message_header">AirPods Pro</h1>
+                <h2 class="landing_message_subheader">Magic like you've never heard.</h2>
+             </div>
+            <div class="landing_message_links_container">
+                <a class="landing_message_links" href="#">Learn more ></a>
+                <a class="landing_message_links" href="#">Buy ></a>            
+            </div>          
+        </div>
+    
+        <div class="stripe_2 border">
+            <div>
+                <h1 class="stripe_2_header">iPhone 11 Pro</h1>
+                <h2 class="stripe_2_subheader">Pro cameras. Pro display. Pro performance.</h2>
+                <p class="stripe_2_sub_subheader">From $24.95/mo. or $599 with trade-in.<sup>1</sup></p>
+            </div>
+            <div class="stripe_2_links_container">
+                <a class="stripe_2_links" href="#">Learn more ></a>
+                <a class="stripe_2_links" href="#">Buy ></a>            
+            </div>
+        </div>
+
+         <!-- split box block -->
+        <div class="split_box  border">
+            <!-- Left  -->
+            <div class="small_container container1">
+                <div class="small_container_text1">
+                    <div>
+                        <h1 class="small_container_text1">Privacy. That's iPhone.</h1>
+                    </div>
+                        
+                    <div class="links_container_1">
+                        <a class="links_small_container1" href="#">Watch the Film <i class=""></i></a>
+                        <a class="links_small_container1" href="#">Learn more ></a>            
+                    </div> 
+                </div>     
+            </div>
+    
+            <!-- Right -->
+            <div class="small_container container2 border">
+                <div>
+                    <h1 class="small_container_text2"> Watch</h1>
+                    <h2 class="small_container_text2">Series 5</h2>
+        
+                    <h4 class="small_container_subheader2">
+                        With the new Always-On Retina display.<br>
+                        You've never seen a watch like this.
+                    </h4>
+                </div>           
+                <div class="links_container_2">
+                        <a class="links_small_container2" href="#">Learn more ></a>
+                        <a class="links_small_container2" href="#">Buy ></a>            
+                </div>
+            </div>
+        </div>
+    
+        <!-- split box block -->
+        <div class="split_box">
+            <!-- Left-->
+            <div class="small-container container3 border">
+                <div>
+                    <h1 class="small_container_text3"><i class="fab fa-apple"></i>tv+</h1>
+                    <h4 class="small_container_text3">Stories to believe in.</h4>
+                    <h3 class="small_container_text3">
+                        Watch on the Apple TV app.<sup>2</sup><br>
+                        November 1.
+                    </h3>
+                </div>
+                            
+                <div class="links_container_3">
+                    <a class="links_small_container3" href="#">Learn more ></a>
+                    <a class="links_small_container3" href="#">Notify me ></a>            
+                </div>                 
+            </div>
+        
+            <!-- Right -->
+            <div class="small-container container4 border">
+                <div>
+                    <h1 class="small_container_text4"><i class="fab fa-apple fa-1x"></i>Card is here.</h1>  
+                         
+                    <h4 class="small_container_text4">
+                        Get 3% Daily Cash on purchases from Apple<br>
+                        using Apple Card.
+                    </h4>
+                </div>           
+                <div class="links_container_4">
+                        <a class="links_small_container4" href="#">Learn more ></a>
+                        <a class="links_small_container4" href="#">Apply now ></a>            
+                </div>
+            </div>
+        </div>
+    
+    
+         <!-- split box block -->
+         <div class="split_box ">
+                <!-- 7-Left -->
+                <div class="small-container container5 border">
+                    <div>
+                        <h1 class="small_container_text5"><i class="fab fa-apple"></i>Arcade</h1>
+                        <h4 class="small_container_text5">
+                            Play extraordinary. <br>                    
+                            Find it on the App Store.
+                        </h4>
+                    </div>
+                                
+                    <div class="links_container_5">
+                        <a class="links_small_container5" href="#">Learn more ></a>
+                        <a class="links_small_container5" href="#">Try it free<sup>3</sup> ></a>            
+                    </div>                 
+                </div>
+             <!-- 7-Right -->
+                <div class="small-container container6 border">
+                    <div>
+                        <h1 class="small_container_text6">
+                            <img src="https://www.apple.com/v/home/ep/images/logos/ipad/logo_tile__ex0pdbqxuuuu_large.png" alt="">
+                        </h1>                
+                        <h4 class="small_container_text6">
+                            Like a computer. Unline any computer.
+                        </h4>
+                    </div>           
+                    <div class="small-container container6">
+                            <a class="links_small_container6" href="#">Learn more ></a>
+                            <a class="links_small_container6" href="#">Buy ></a>            
+                    </div>
+                </div>
+            </div>
+        </div>
 </body>
 </html>
