--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,13 +2,23 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
-  position: absolute;
-  width: 375px;
-  height: 812px;
   background: linear-gradient(
     180deg, #ffffff 43.23%, rgba(88, 233, 233, 0.734375) 100%
   );
   border: 1px solid #ffffff;
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  justify-content: center;
+  align-items: center;
 }
+
+
+
+.split_box{
+display: flex
+}
+
+.border {
+  border: 1px solid black;
+}
+
