--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -169,6 +169,38 @@
                     </div>
                 </div>
             </div>
+            <div class="split_box ">
+                <!-- 7-Left -->
+                <div class="small-container container7 border">
+                    <div>
+                        <h1 class="small_container_text7"><i class="fab fa-apple"></i>Arcade</h1>
+                        <h4 class="small_container_text7">
+                            Play extraordinary. <br>                    
+                            Find it on the App Store.
+                        </h4>
+                    </div>
+                                
+                    <div class="links_container_7">
+                        <a class="links_small_container7" href="#">Learn more ></a>
+                        <a class="links_small_container7" href="#">Try it free<sup>3</sup> ></a>            
+                    </div>                 
+                </div>
+             <!-- 7-Right -->
+                <div class="small-container container8 border">
+                    <div>
+                        <h1 class="small_container_text8">
+                            <img src="https://www.apple.com/v/home/ep/images/logos/ipad/logo_tile__ex0pdbqxuuuu_large.png" alt="">
+                        </h1>                
+                        <h4 class="small_container_text8">
+                            Like a computer. Unline any computer.
+                        </h4>
+                    </div>           
+                    <div class="small-container container8">
+                            <a class="links_small_container8" href="#">Learn more ></a>
+                            <a class="links_small_container8" href="#">Buy ></a>            
+                    </div>
+                </div>
+            </div>
         </div>
 </body>
 </html>
