--- a/static/css/slideshow.css
+++ b/static/css/slideshow.css
@@ -1,7 +1,8 @@
-box-sizing:border-box .slideshow-container {
-  max-width: 600px;
+.slideshow-container {
+  box-sizing: border-box;
+  width: 80vw;
   position: relative;
-  margin: auto;
+  overflow: hidden ;
 }
 
 .mySlides {
@@ -14,8 +15,8 @@ box-sizing:border-box .slideshow-container {
   position: absolute;
   top: 50%;
   width: auto;
-  margin-top: -22px;
-  padding: 16px;
+  margin-top: -30px;
+  padding: 10px;
   color: white;
   font-weight: bold;
   font-size: 18px;
@@ -76,9 +77,19 @@ box-sizing:border-box .slideshow-container {
 }
 
 @-webkit-keyframes fade {
-  from {opacity: 0.4;} to {opacity: 1;}
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes fade {
-  from {opacity: 0.4;} to {opacity: 1;}
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
