--- a/templates/index.html
+++ b/templates/index.html
@@ -7,29 +7,31 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/slideshow.css">
-    
+
     <title>Document</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="header">
-            <div class="logo">
-                <img src="" alt="settler logo">
-            </div>
-            <div class="header_text">
-                <h2>motto</h2>
-            </div>
-        </div>
 
+    <div class="container">
         <div class="language_selector">
             <h5>Language selector</h5>
         </div>
         
+        <div class="header">
+            <div class="logo">
+                <img class="logo_img" src="../static/images/Setteler Logo.png" alt="settler logo">
+            </div>
+        </div>
+        <div class="header_text">
+            <h2>motto</h2>
+        </div>
+
+
         <div class="slideshow-container">
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="img1.jpg" alt="slide one" style="width:100%">
+                <img src="../static/images/slide1.png" alt="slide one" style="width:100%">
                 <div class="text">Caption Text</div>
             </div>
 
@@ -70,5 +72,6 @@
         </footer>
     </div>
 </body>
-    <script src="{{url_for('static' , filename= 'js/slideshow.js')}}"></script>
+<script src="{{url_for('static' , filename= 'js/slideshow.js')}}"></script>
+
 </html>
