--- a/templates/maps.html
+++ b/templates/maps.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html>
 
+<head>
+    <style>
+        /* Set the size of the div element that contains the map */
+        #map {
+            height: 100vh;
+            /* The height is 400 pixels */
+            width: 100vw;
+            /* The width is the width of the web page */
+        }
+    </style>
+</head>
+
+<body>
+    <h3>Very Important Places</h3>
+    <!--The div element for the map -->
+    <div id="map"></div>
+    <script>
+        // Initialize and add the map
+        function initMap() {
+            // The location of Uluru
+            var uluru = { lat: 32.0853, lng: 34.7818 };
+            var misrad = { lat: 32.073098, lng: 34.787601 };
+            // The map, centered at Uluru
+            var map = new google.maps.Map(
+                document.getElementById('map'), { zoom: 13, center: uluru });
+            // The marker, positioned at Uluru
+            var marker = new google.maps.Marker({ position: uluru, map: map });
+            var markerTwo = new google.maps.Marker({ position: misrad, map: map });
+        }
+    </script>
+    <!--Load the API from the specified URL
+    * The async attribute allows the browser to render the page while the API loads
+    * The key parameter will contain your own API key (which is not needed for this tutorial)
+    * The callback parameter executes the initMap() function
+    -->
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADVTMsjoE03hJDiB5xYWnLe5l4F-RVE74
+    &callback=initMap">
+    </script>
 </body>
+
 </html>
