--- a/templates/prices.html
+++ b/templates/prices.html
@@ -1,10 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Prices</title>
+    <link rel="stylesheet" href="../static/css/style.css" />
+  </head>
+  <body>
+    <div class="stripe">
+      <table id="transportation">
+        <caption>Transportation</caption>
+        <tr>
+          <th>Type</th>
+          <th>Average Price</th>
+          <th>City</th>
+        </tr>
+        <tr>
+          <td>Bus</td>
+          <td>2</td>
+          <td>Tel Aviv</td>
+        </tr>
+        <tr>
+          <td>Car</td>
+          <td>2</td>
+          <td>Tel Aviv</td>
+        </tr>
+        <tr>
+          <td>Taxi</td>
+          <td>2</td>
+          <td>Tel Aviv</td>
+        </tr>
+      </table>
 
-</body>
+      <table id="food">
+        <caption>Food</caption>
+        <tr>
+            <th>Type</th>
+            <th>Average Price</th>
+            <th>City</th>
+          </tr>
+          <tr>
+            <td>Bus</td>
+            <td>2</td>
+            <td>Tel Aviv</td>
+          </tr>
+          <tr>
+            <td>Car</td>
+            <td>2</td>
+            <td>Tel Aviv</td>
+          </tr>
+          <tr>
+            <td>Taxi</td>
+            <td>2</td>
+            <td>Tel Aviv</td>
+          </tr>
+      </table>
+    </div>
+    <div class="stripe">
+        <table id="transportation">
+          <caption>Transportation</caption>
+          <tr>
+            <th>Type</th>
+            <th>Average Price</th>
+            <th>City</th>
+          </tr>
+          <tr>
+            <td>Bus</td>
+            <td>2</td>
+            <td>Tel Aviv</td>
+          </tr>
+          <tr>
+            <td>Car</td>
+            <td>2</td>
+            <td>Tel Aviv</td>
+          </tr>
+          <tr>
+            <td>Taxi</td>
+            <td>2</td>
+            <td>Tel Aviv</td>
+          </tr>
+        </table>
+  
+        <table id="food">
+          <caption>Food</caption>
+          <tr>
+              <th>Type</th>
+              <th>Average Price</th>
+              <th>City</th>
+            </tr>
+            <tr>
+              <td>Bus</td>
+              <td>2</td>
+              <td>Tel Aviv</td>
+            </tr>
+            <tr>
+              <td>Car</td>
+              <td>2</td>
+              <td>Tel Aviv</td>
+            </tr>
+            <tr>
+              <td>Taxi</td>
+              <td>2</td>
+              <td>Tel Aviv</td>
+            </tr>
+        </table>
+      </div>
+      <div class="stripe">
+        <table id="transportation">
+          <caption>Transportation</caption>
+          <tr>
+            <th>Type</th>
+            <th>Average Price</th>
+            <th>City</th>
+          </tr>
+          <tr>
+            <td>Bus</td>
+            <td>2</td>
+            <td>Tel Aviv</td>
+          </tr>
+          <tr>
+            <td>Car</td>
+            <td>2</td>
+            <td>Tel Aviv</td>
+          </tr>
+          <tr>
+            <td>Taxi</td>
+            <td>2</td>
+            <td>Tel Aviv</td>
+          </tr>
+        </table>
+  
+        <table id="food">
+          <caption>Food</caption>
+          <tr>
+              <th>Type</th>
+              <th>Average Price</th>
+              <th>City</th>
+            </tr>
+            <tr>
+              <td>Bus</td>
+              <td>2</td>
+              <td>Tel Aviv</td>
+            </tr>
+            <tr>
+              <td>Car</td>
+              <td>2</td>
+              <td>Tel Aviv</td>
+            </tr>
+            <tr>
+              <td>Taxi</td>
+              <td>2</td>
+              <td>Tel Aviv</td>
+            </tr>
+        </table>
+      </div>
+  </body>
 </html>
