--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,3 +22,12 @@ display: flex
   border: 1px solid black;
 }
 
+.stripe {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 2%;
+}
+
+.stripe > table{
+  text-align: center;
+}
