--- a/static/css/slideshow.css
+++ b/static/css/slideshow.css
@@ -1,71 +1,31 @@
-.slideshow-container {
-  box-sizing: border-box;
-  width: 80vw;
-  position: relative;
-  overflow: hidden ;
-}
+
 
 .mySlides {
   display: none;
 }
-
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -30px;
-  padding: 10px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
+img {
+  vertical-align: middle;
 }
 
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+.slideshow-container {
+  display: block;
+  flex-direction: column;
+  height: 25vh;
+  width: 30vw;
+  margin: auto;
 }
 
 .dot {
-  cursor: pointer;
   height: 15px;
   width: 15px;
   margin: 0 2px;
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
-  transition: background-color 0.6s ease;
+  transition: background-color 1s ease-in-out;
 }
 
-.active,
-.dot:hover {
+.active {
   background-color: #717171;
 }
 
