--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,3 +57,12 @@ body {
 .border {
   border: 1px solid black;
 }
+
+footer{
+    display: flex;
+    flex-direction: column;
+    margin-top: 1px;
+    width: 90vw;
+    justify-content: center;
+    align-items: center;
+}
