--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="form-container">
-        <form>
+        <form action="{{url_for('create_user')}}" method="post">
         <label>Username</label>:</label>
         <input type="text" name="username" /><br>
           <label>First Name:</label>
@@ -25,7 +25,7 @@
           <input type="date" name="bday"><br><br>
         
           <label>Interests</label>
-          <select multiple name="interests">
+          <select multiple name="interests[]">
             <option  value="sports">Sports</option >
             <option  value="politics">Politics</option >
             <option  value="art">Art</option >
@@ -34,9 +34,9 @@
             <option  value="music">Music</option >
             <option  value="religion">Religon</option >
             <option  value="travel">Travel</option >
-              <input type="submit" value="submit">
 
         </select>
+            <input type="submit" value="submit">
 
 
         </form>
