--- a/templates/index.html
+++ b/templates/index.html
@@ -27,38 +27,14 @@
         </div>
 
         <div class="sign_box">
-            <div class="sign_in">
+            <div class="sign">
                 <h3>Sign In</h3>
             </div>
-            <div class="sign_up">
+            <div class="sign">
                 <h3>Sign Up</h3>
             </div>
         </div>
 
-        <div class="slideshow-container">
-            <div class="slideshow-container">
-
-                <div class="mySlides fade">
-                    <img src="../static/images/slide1.png" alt="slide one" style="width:100%">
-                </div>
-
-                <div class="mySlides fade">
-                    <img src="../static/images/slide1.png" alt="slide two" style="width:100%">
-                </div>
-
-                <div class="mySlides fade">
-                    <img src="../static/images/slide1.png" alt="slide three" style="width:100%">
-                </div>
-                <br>
-
-                <div style="text-align:center">
-                    <span class="dot"></span>
-                    <span class="dot"></span>
-                    <span class="dot"></span>
-                </div>
-                <br>
-            </div>
-        </div>
         <footer>
             <div>
                 Avi Barizani - Eric Pinhasovich - Jack E. Civre - Jacky Lalou - Yonatan Salmon
