--- a/templates/prices.html
+++ b/templates/prices.html
@@ -21,14 +21,24 @@
         </tr>
         <tr>
           <td>Car</td>
-          <td>2</td>
-        
+          <td>2</td> 
         </tr>
         <tr>
           <td>Taxi</td>
           <td>2</td>
        
         </tr>
+   
+          <tr>
+            <td>Gas</td>
+            <td>2</td>
+         
+          </tr>
+          <tr>
+            <td>Mechanic Inspection</td>
+            <td>2</td>
+          </tr>
+      
       </table>
 
       <table id="food">
@@ -74,6 +84,10 @@
             <td>Onion (1kg)</td>
             <td>3.64 ₪	</td>
           </tr>
+          <tr>
+            <td>Beer(330cc)</td>
+            <td>31.44 ₪	</td>
+          </tr>
       </table>
     </div>
     <div class="stripe">
@@ -84,82 +98,119 @@
             <th>Average Price</th>
           </tr>
           <tr>
-            <td>Bus</td>
+            <td>ID/Passport Renewal</td>
             <td>2</td>
           </tr>
           <tr>
-            <td>Car</td>
+            <td>Driving License</td>
             <td>2</td>
           </tr>
           <tr>
-            <td>Taxi</td>
+            <td>Language Courses (ulpan)</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>Parking Ticket</td>
             <td>2</td>
           </tr>
         </table>
   
-        <table id="food">
-          <caption>Food</caption>
+        <table id="recreation">
+          <caption>Recreation</caption>
           <tr>
               <th>Item</th>
               <th>Average Price</th>
             </tr>
             <tr>
-              <td>Bus</td>
+              <td>Movie Theater</td>
               <td>2</td>
             </tr>
             <tr>
-              <td>Car</td>
+              <td>Dance Club</td>
               <td>2</td>
             </tr>
             <tr>
-              <td>Taxi</td>
+              <td>Gym Membership</td>
               <td>2</td>
             </tr>
+            <tr>
+                <td>Restaurant</td>
+                <td>2</td>
+              </tr>
+              <tr>
+                <td>Tip</td>
+                <td>2</td>
+              </tr>
         </table>
       </div>
       <div class="stripe">
-        <table id="transportation">
-          <caption>Transportation</caption>
+        <table id="shopping">
+          <caption>Shopping</caption>
           <tr>
             <th>Item</th>
             <th>Average Price</th>
           </tr>
           <tr>
-            <td>Bus</td>
+            <td>Pants</td>
             <td>2</td>
           </tr>
           <tr>
-            <td>Car</td>
+            <td>Shoes</td>
             <td>2</td>
           </tr>
           <tr>
-            <td>Taxi</td>
+            <td>T-Shirt</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>Deodorant</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>Toothpaste</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>Jewlery</td>
             <td>2</td>
           </tr>
         </table>
   
-        <table id="food">
-          <caption>Food</caption>
+        <table id="appliances">
+          <caption>Appliances</caption>
           <tr>
               <th>Item</th>
               <th>Average Price</th>
 
             </tr>
             <tr>
-              <td>Bus</td>
-              <td>2</td>
-           
+              <td>TV</td>
+              <td>2</td>   
             </tr>
             <tr>
-              <td>Car</td>
-              <td>2</td>
-           
+              <td>Computer</td>
+              <td>2</td>    
             </tr>
             <tr>
-              <td>Taxi</td>
+              <td>Cellphone</td>
               <td>2</td>
-           
             </tr>
+            <tr>
+                <td>Washing Machine</td>
+                <td>2</td>  
+              </tr>
+              <tr>
+                <td>Refrigerator</td>
+                <td>2</td>  
+              </tr>
+              <tr>
+                <td>Couch</td>
+                <td>2</td>  
+              </tr>
+              <tr>
+                <td>Bed</td>
+                <td>2</td>  
+              </tr>
         </table>
       </div>
   </body>
