--- a/templates/signup.html
+++ b/templates/signup.html
@@ -33,10 +33,10 @@
             <option  value="food">Food</option >
             <option  value="music">Music</option >
             <option  value="religion">Religon</option >
-            <option  value="travel">Travel</option >
-              <input type="submit" value="submit">
+            <option  value="travel">Travel</option ><br>
 
         </select>
+        <input type="submit" value="submit">
 
 
         </form>
