--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -23,8 +23,12 @@
 
     <div class="container">
         <nav class="nav-header">
-      
-            <div class="nav-sub-container nav-list ">
+            <div class="header">
+                <div class="small_logo">
+                    <img class="logo_img" src="../static/images/Setteler Logo.png" alt="settler logo">
+                </div>
+            </div>
+            <div class="nav-list ">
                 <a class="nav-links" href="https://www.apple.com/mac/" target="_blank">Home</a>
                 <a class="nav-links" href="https://www.apple.com/ipad/" target="_blank">About</a>
                 <a class="nav-links" href="https://www.apple.com/iphone/" target="_blank">Forum</a>
