--- a/templates/meal.html
+++ b/templates/meal.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Meal</title>
 </head>
 <body>
-
+<div class="button_container">
+    <button> Host </button>
+    <button>Be Hosted</button>
+</div>
 </body>
 </html>
