--- a/templates/prices.html
+++ b/templates/prices.html
@@ -15,27 +15,27 @@
      
         </tr>
         <tr>
-          <td>Bus</td>
+          <td>🚌 Bus</td>
           <td>2</td>
  
         </tr>
         <tr>
-          <td>Car</td>
+          <td>🚗 Car</td>
           <td>2</td> 
         </tr>
         <tr>
-          <td>Taxi</td>
+          <td>🚕 Taxi</td>
           <td>2</td>
        
         </tr>
    
           <tr>
-            <td>Gas</td>
+            <td>⛽ Gas</td>
             <td>2</td>
-         
+            
           </tr>
           <tr>
-            <td>Mechanic Inspection</td>
+            <td>⚙️ Mechanic Inspection</td>
             <td>2</td>
           </tr>
       
@@ -49,43 +49,43 @@
       
           </tr>
           <tr>
-            <td>Milk (regular), (1 liter)</td>
+            <td>🥛 Milk (regular), (1 liter)</td>
             <td>5.75 ₪	</td>
           </tr>
           <tr>
-            <td>Loaf of Fresh White Bread (500g)	</td>
+            <td>🍞 Loaf of Fresh White Bread (500g)	</td>
             <td>7.16 ₪	</td>
           </tr>
           <tr>
-            <td>Rice (white), (1kg)	</td>
+            <td>🍚 Rice (white), (1kg)	</td>
             <td>8.67 ₪	</td>
           </tr>
           <tr>
-            <td>Eggs (regular) (12)</td>
+            <td>🥚 Eggs (regular) (12)</td>
             <td>12.57 ₪	</td>
           </tr>
           <tr>
-            <td>Chicken Breasts (1kg)	</td>
+            <td>🍗 Chicken Breasts (1kg)	</td>
             <td>33.77 ₪	</td>
           </tr>
           <tr>
-            <td>Apples (1kg)</td>
+            <td>🍎 Apples (1kg)</td>
             <td>9.74 ₪	</td>
           </tr>
           <tr>
-            <td>Oranges (1kg)</td>
+            <td>🍊 Oranges (1kg)</td>
             <td>6.15 ₪	</td>
           </tr>
           <tr>
-            <td>Tomato (1kg)</td>
+            <td>🍅 Tomato (1kg)</td>
             <td>5.28 ₪	</td>
           </tr>
           <tr>
-            <td>Onion (1kg)</td>
+            <td>🧅 Onion (1kg)</td>
             <td>3.64 ₪	</td>
           </tr>
           <tr>
-            <td>Beer(330cc)</td>
+            <td>🍺 Beer(330cc)</td>
             <td>31.44 ₪	</td>
           </tr>
       </table>
@@ -98,19 +98,19 @@
             <th>Average Price</th>
           </tr>
           <tr>
-            <td>ID/Passport Renewal</td>
+            <td>📚 ID/Passport Renewal</td>
             <td>2</td>
           </tr>
           <tr>
-            <td>Driving License</td>
+            <td>💳 Driving License</td>
             <td>2</td>
           </tr>
           <tr>
-            <td>Language Courses (ulpan)</td>
+            <td>🗣️ Language Courses (ulpan)</td>
             <td>2</td>
           </tr>
           <tr>
-            <td>Parking Ticket</td>
+            <td>🎫 Parking Ticket</td>
             <td>2</td>
           </tr>
         </table>
@@ -122,23 +122,23 @@
               <th>Average Price</th>
             </tr>
             <tr>
-              <td>Movie Theater</td>
+              <td>🍿 Movie Theater</td>
               <td>2</td>
             </tr>
             <tr>
-              <td>Dance Club</td>
+              <td>💃 Dance Club</td>
               <td>2</td>
             </tr>
             <tr>
-              <td>Gym Membership</td>
+              <td>🏋️‍♂️ Gym Membership</td>
               <td>2</td>
             </tr>
             <tr>
-                <td>Restaurant</td>
+                <td>🍽️ Restaurant</td>
                 <td>2</td>
               </tr>
               <tr>
-                <td>Tip</td>
+                <td>💸 Tip</td>
                 <td>2</td>
               </tr>
         </table>
@@ -151,27 +151,27 @@
             <th>Average Price</th>
           </tr>
           <tr>
-            <td>Pants</td>
+            <td>👖 Pants</td>
             <td>2</td>
           </tr>
           <tr>
-            <td>Shoes</td>
+            <td>👞 Shoes</td>
             <td>2</td>
           </tr>
           <tr>
-            <td>T-Shirt</td>
+            <td>👕 T-Shirt</td>
             <td>2</td>
           </tr>
           <tr>
-            <td>Deodorant</td>
+            <td>🧼 Deodorant</td>
             <td>2</td>
           </tr>
           <tr>
-            <td>Toothpaste</td>
+            <td>🦷 Toothpaste</td>
             <td>2</td>
           </tr>
           <tr>
-            <td>Jewlery</td>
+            <td>💍 Jewlery</td>
             <td>2</td>
           </tr>
         </table>
@@ -184,31 +184,31 @@
 
             </tr>
             <tr>
-              <td>TV</td>
+              <td>📺 TV</td>
               <td>2</td>   
             </tr>
             <tr>
-              <td>Computer</td>
+              <td>💻 Computer</td>
               <td>2</td>    
             </tr>
             <tr>
-              <td>Cellphone</td>
+              <td>📱 Cellphone</td>
               <td>2</td>
             </tr>
             <tr>
-                <td>Washing Machine</td>
+                <td>🗄️ Washing Machine</td>
                 <td>2</td>  
               </tr>
               <tr>
-                <td>Refrigerator</td>
+                <td>🧃 Refrigerator</td>
                 <td>2</td>  
               </tr>
               <tr>
-                <td>Couch</td>
+                <td>🛋️ Couch</td>
                 <td>2</td>  
               </tr>
               <tr>
-                <td>Bed</td>
+                <td>🛏️ Bed</td>
                 <td>2</td>  
               </tr>
         </table>
