--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,7 +27,7 @@ a {
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   padding: 1px;
 }
@@ -72,7 +72,7 @@ a {
   height: auto;
   margin-left: auto;
   margin-right: auto;
-  width: 75%;
+  width: 85%;
   justify-content: start;
 }
 
@@ -105,13 +105,16 @@ footer {
 }
 
 .sign {
-  padding: 1px 45px 1px 45px;
-  margin: 5px;
+  padding: 1px 55px 1px 55px;
+  margin: 10px;
   font-size: xx-large;
-  color: white;
-  background-color: lightblue;
+  color: white ;
+  background-color: rgb(16, 99, 207);
   stroke: 1px solid black;
   border-radius: 10px;
+}
+.sign a{
+    color: white
 }
 
 .sign h3 {
