--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="stylesheet" href="../static/css/slideshow.css">
+
 
     <title>Document</title>
 </head>
@@ -28,17 +28,21 @@
 
         <div class="sign_box">
             <div class="sign">
-                <h3>Sign In</h3>
+                <a>
+                    <h3>Sign in</h3>
+                </a>
             </div>
             <div class="sign">
-                <h3>Sign Up</h3>
+                <a>
+                    <h3>Sign up</h3>
+                </a>
             </div>
         </div>
 
         <footer>
             <div>
                 Avi Barizani - Eric Pinhasovich - Jack E. Civre - Jacky Lalou - Yonatan Salmon
-                <hr/>
+                <hr />
             </div>
             <div>
                 ITC Hackathon - Hack for good 2020
