--- a/templates/signup.html
+++ b/templates/signup.html
@@ -27,7 +27,8 @@
         </nav>
         <div class="form-container">
             <form action="{{url_for('create_user')}}" method="post">
-                <div class="personal">
+                
+                <div class="form_box">
                     <div class="form_item">
                         <h3>Username:</h3>
                         <input type="text" name="username" /><br>
@@ -45,10 +46,13 @@
                         <input type="date" name="bday"><br><br>
                     </div>
                 </div>
-                <div class="location">
+                
+                <hr>
+
+                <div class="form_box">
                     <div class="form_item">
                         <h3>Country of Origin:</h3>
-                        <input type="text" name="country_of_origin" /><br>
+                        <input type="text" name="country_of_origin" /></br>
                     </div>
                     <div class="form_item">
                         <h3>City of Residence:</h3>
@@ -59,7 +63,7 @@
                         <input type="text" name="address" /><br>
                     </div>
                 </div>
-                <div class="interests">
+                <!-- <div class="form_box">
                     <div class="form_item">
                         <h3>Interests</h3>
                         <select multiple name="interests[]">
@@ -73,7 +77,7 @@
                             <option value="travel">Travel</option>
                         </select>
                     </div>
-                </div>
+                </div> -->
 
             </form>
         </div>
