--- a/templates/host.html
+++ b/templates/host.html
@@ -22,18 +22,18 @@
           <label>Maximum Number of Guests:</label>
           <input type="number" name="number_of_guests" min="1" max="10" /><br>
           <label>Meal Type</label> 
-    <select multiple name="food_preference">
-            <option  value="fish">Fish</option >
-            <option  value="meat">Meat</option >
-            <option  value="milk">Milk</option >
-            <option  value="indian">Indian</option >
-            <option  value="kosher">Kosher</option >
-            <option  value="chinese">Chinese</option >
-            <option  value="italian">Italian</option >
-            <option  value="israeli">Israeli</option >
-            <option  value="kosher">Kosher</option >
-            <option  value="vegan">Vegan</option >
-            <option  value="vegetarian">Vegetarian</option >
+    <select multiple name="food_preference[]">
+            <option name="preference"  value="fish">Fish</option >
+            <option name="preference"  value="meat">Meat</option >
+            <option name="preference" value="milk">Milk</option >
+            <option name="preference" value="indian">Indian</option >
+            <option name="preference"value="kosher">Kosher</option >
+            <option name="preference" value="chinese">Chinese</option >
+            <option name="preference"  value="italian">Italian</option >
+            <option name="preference"  value="israeli">Israeli</option >
+            <option name="preference"  value="kosher">Kosher</option >
+            <option name="preference"  value="vegan">Vegan</option >
+            <option name="preference"  value="vegetarian">Vegetarian</option >
         </select>
         <h6>Hold down the Ctrl (windows) / Command (Mac) button to select multiple options.</h6>
 
