--- a/templates/listings.html
+++ b/templates/listings.html
@@ -2,9 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Listing</title>
 </head>
 <body>
 
+    <table>
+        <tr class="header">
+          <th class="id header">ID</th>
+          <th class="first_name header">First Name</th>
+          <th class="last_name header">Last Name</th>
+          <th class="address header">Address</th>
+          <th class="guest_number header">Available Seats</th>
+          <th class="meal_type header" >Meal Type</th>
+          <th class="food_restriction header">Food Restriction</th>
+          <th class="meal_date header">Meal Date</th>
+          <th class="meal_time header">Meal Time</th>
+          <th class="join_btn header">Join</th>
+        </tr>
+        <tr class="">
+            <td class="id">{{host.id}}</td>
+            <td class="first_name_data" >{{host.first_name}}</td>
+            <td class="last_name_data">{{host.last_name}}</td>
+            <td class="adress data">{{host.address}}</td>
+            <td class="guest_number data" >{{host.guest_number}}</td>
+            <td class="meal_type data">{{host.meal_type}}</td>
+            <td class="food_restriction data">{{host.food_restriction}}</td>
+            <td class="meal_date data">{{host.meal_date}}</td>
+            <td class="meal_time data">{{host.meal_time}}</td>
+            <td class="join data"><button>Join</button></td>
+            
+            
+        </table> 
 </body>
 </html>
