--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -4,12 +4,13 @@
 </head>
 <body>
 
-</body>
+<button onclick="window.location.href = '/quiz/language';">Language Quiz</button>
+<button onclick="window.location.href = '/quiz/pop';">Pop-Culture Quiz</button>
+<button onclick="window.location.href = '/quiz/food';">Food Quiz</button>
+<button onclick="window.location.href = '/quiz/rec';">Recommendation Quiz</button>
 
-<button onclick="window.location.href = 'https://w3docs.com';">Language Quiz</button>
-<button onclick="window.location.href = 'https://w3docs.com';">Pop-Culture Quiz</button>
-<button onclick="window.location.href = 'https://w3docs.com';">Food Quiz</button>
-<button onclick="window.location.href = 'https://w3docs.com';">Recomendation Quiz</button>
+
+</body>
 
 
 </html>
