changed routes and added links to pages

--- a/templates/meal.html
+++ b/templates/meal.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <div class="button_container">
-    <button> Host </button>
-    <button>Be Hosted</button>
+    <button onclick="window.location.href = '/meal/createmeal';"> Host </button>
+    <button onclick="window.location.href = '/meal/listings';">Be Hosted</button>
 </div>
 </body>
 </html>
