--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,12 +11,13 @@
 <body>
     <div class="container">
         <div class="header">
-        <nav class="nav-header">
+            <nav class="nav-header">
                 <div class="logo">
                     <img class="logo_img" src="../static/images/Setteler Logo.png" alt="settler logo">
                 </div>
-            </div>
-        </nav>
+            </nav>
+        </div>
+
         <div class="form-container">
             <form action="{{url_for('create_user')}}" method="post">
 
@@ -70,7 +71,7 @@
                         </select>
                     </div>
                 </div> -->
-
+            <input type="submit">Submit<input>
             </form>
         </div>
     </div>
