--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -76,7 +76,7 @@
           <h1 class="stripe_2_header header">Get all</h1>
           <h2 class="stripe_2_subheader">Something something something.</h2>
           <p class="stripe_2_sub_subheader">
-            From $24.95/mo. or $599 with trade-in.<sup>1</sup>
+            From $24.95/mo. or $599 
           </p>
         </div>
         <div class="stripe_2_links_container">
@@ -143,7 +143,7 @@
             </h4>
           </div>
           <div class="small-container container4">
-            <a class="links_small_container4" href="#">Learn more ></a>
+            <a class="links_small_container4" href="#">Box 4</a>
           </div>
         </div>
       </div>
@@ -172,7 +172,7 @@
             </h4>
           </div>
           <div class="small-container container8">
-            <a class="links_small_container8" href="#">Learn more ></a>
+            <a class="links_small_container8" href="#">Box 6</a>
           </div>
         </div>
       </div>
