--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -142,7 +142,7 @@
               Box 4
             </h4>
           </div>
-          <div class="small-container container4">
+          <div class="small-containercontainer4">
             <a class="links_small_container4" href="#">Box 4</a>
           </div>
         </div>
@@ -157,7 +157,7 @@
             </h4>
           </div>
 
-          <div class="links_container_7">
+          <div class="links_container_5">
             <a class="links_small_container7" href="#">Box 5</a>
           </div>
         </div>
@@ -167,15 +167,45 @@
             <h1 class="small_container_text6">
               Box 6
             </h1>
-            <h4 class="small_container_text8">
+            <h4 class="small_container_text6">
               Box 6
             </h4>
           </div>
-          <div class="small-container container8">
-            <a class="links_small_container8" href="#">Box 6</a>
+          <div class="small-container">
+            <a class="links_small_container6" href="#">Box 6</a>
           </div>
         </div>
       </div>
+      <div class="split_box ">
+        <!-- 5-Left -->
+        <div class="small-container container7 ">
+          <div>
+            <h1 class="small_container_text5">Box 7</h1>
+            <h4 class="small_container_text5">
+              Box 7
+            </h4>
+          </div>
+
+          <div class="links_container_7">
+            <a class="links_small_container7" href="#">Box 7</a>
+          </div>
+        </div>
+        <!-- 6-Right -->
+        <div class="small-container container8 ">
+          <div>
+            <h1 class="small_container_text8">
+              Box 8
+            </h1>
+            <h4 class="small_container_text8">
+              Box 8
+            </h4>
+          </div>
+          <div class="small-container ">
+            <a class="links_small_container8" href="#">Box 8</a>
+          </div>
+        </div>
+      </div>
+      
     </div>
   </body>
 </html>
