quiz page re-arranged and css added

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -1,14 +1,55 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <title>Settler</title>
+    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/quiz.css">
 
 </head>
+
 <body>
+    <div class="container">
+        <nav>
 
-<button onclick="window.location.href = '/quiz/language';">Language Quiz</button>
-<button onclick="window.location.href = '/quiz/pop';">Pop-Culture Quiz</button>
-<button onclick="window.location.href = '/quiz/food';">Food Quiz</button>
-<button onclick="window.location.href = '/quiz/rec';">Recommendation Quiz</button>
+        </nav>
 
+        <div class="quiz">
+
+            <div class="quiz_1">
+                <button onclick="window.location.href = '/quiz/language';">
+                    <h1 class=" quiz_name">
+                        Language Quiz
+                    </h1>
+                </button>
+            </div>
+            <div class="quiz_2">
+                <button onclick="window.location.href = '/quiz/pop';">
+                    <h1 class=" quiz_name">
+                        Pop-Culture Quiz
+                    </h1>
+                </button>
+            </div>
+            <div class="quiz_3">
+                <button onclick="window.location.href = '/quiz/food';">
+                    <h1 class=" quiz_name">
+                        Food Quiz
+                    </h1>
+                </button>
+            </div>
+            <div class="quiz_4">
+                <button onclick="window.location.href = '/quiz/rec';">
+                    <h1 class=" quiz_name">
+                        Recommendation Quiz
+                    </h1>
+                </button>
+            </div>
+        </div>
+    </div>
 
 </body>
 
