--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -61,7 +61,7 @@
         </div>
       </nav>
 
-      <div class="stripe1 header">
+      <div class="stripe stripe1 header">
         <div>
           <h1 class="stripe1_header header">Settler</h1>
           <h2 class="stripe1_subheader">Your home away from home...</h2>
@@ -71,7 +71,7 @@
         </div>
       </div>
 
-      <div class="stripe_2 header">
+      <div class="stripe stripe_2 header">
         <div>
           <h1 class="stripe_2_header header">Get all</h1>
           <h2 class="stripe_2_subheader">Something something something.</h2>
@@ -90,30 +90,17 @@
         <!-- 1 Left-->
         <div class="small-container container1 ">
           <div>
-            <h1 class="small_container_text1">Box1</h1>
-            <h4 class="small_container_text1">Box 1.</h4>
-            <h3 class="small_container_text1">
-              Box 1
-            </h3>
+         
+            
           </div>
 
-          <div class="links_container_1">
-            <a class="links_small_container1" href="#">Box 1</a>
-          </div>
+         
         </div>
 
         <!-- 2vRight -->
         <div class="small-container container2 ">
-          <div>
-            <h1 class="small_container_text2">Box 2</h1>
-
-            <h4 class="small_container_text2">
-              Box 2
-            </h4>
-          </div>
-          <div class="links_container_2">
-            <a class="links_small_container2" href="#">Box 2</a>
-          </div>
+         
+         
         </div>
       </div>
 
@@ -122,86 +109,37 @@
         <!-- 3-Left -->
         <div class="small-container container3 ">
           <div>
-            <h1 class="small_container_text3">Box 3</h1>
-            <h4 class="small_container_text3">
-              Box 3
-            </h4>
+       
           </div>
 
-          <div class="links_container_3">
-            <a class="links_small_container3" href="#">Box 3</a>
-          </div>
+          
         </div>
         <!-- 4-Right -->
         <div class="small-container container4 ">
-          <div>
-            <h1 class="small_container_text4">
-              Box 4
-            </h1>
-            <h4 class="small_container_text4">
-              Box 4
-            </h4>
-          </div>
-          <div class="small-containercontainer4">
-            <a class="links_small_container4" href="#">Box 4</a>
-          </div>
+          
         </div>
       </div>
       <div class="split_box ">
         <!-- 5-Left -->
         <div class="small-container container5 ">
-          <div>
-            <h1 class="small_container_text5">Box 5</h1>
-            <h4 class="small_container_text5">
-              Box 5
-            </h4>
-          </div>
-
-          <div class="links_container_5">
-            <a class="links_small_container7" href="#">Box 5</a>
-          </div>
+          
         </div>
         <!-- 6-Right -->
         <div class="small-container container6 ">
-          <div>
-            <h1 class="small_container_text6">
-              Box 6
-            </h1>
-            <h4 class="small_container_text6">
-              Box 6
-            </h4>
-          </div>
-          <div class="small-container">
-            <a class="links_small_container6" href="#">Box 6</a>
-          </div>
+          
         </div>
       </div>
+
       <div class="split_box ">
         <!-- 5-Left -->
         <div class="small-container container7 ">
-          <div>
-            <h1 class="small_container_text5">Box 7</h1>
-            <h4 class="small_container_text5">
-              Box 7
-            </h4>
-          </div>
+         
 
-          <div class="links_container_7">
-            <a class="links_small_container7" href="#">Box 7</a>
-          </div>
         </div>
         <!-- 6-Right -->
         <div class="small-container container8 ">
-          <div>
-            <h1 class="small_container_text8">
-              Box 8
-            </h1>
-            <h4 class="small_container_text8">
-              Box 8
-            </h4>
-          </div>
-          <div class="small-container ">
-            <a class="links_small_container8" href="#">Box 8</a>
+          
+          </a>
           </div>
         </div>
       </div>
