--- a/static/css/welcome.css
+++ b/static/css/welcome.css
@@ -33,60 +33,63 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-
-
 }
 
 .split_box{
     display: flex;
     justify-content: center;
-    justify-content: space-evenly;
+    justify-content:center; 
    
 }
 .small-container{
     border: 1px solid green;
     width: 300px;
+    height: 200px;
     margin: 5px;
-}
-
-.container1{
-    background-image: url("https://www.androidguys.com/wp-content/uploads/2017/12/Where-are-you.jpg");
     background-size: cover;
     background-position: center;
+}
+
+
+.container1{
+    background-image: url("https://www.androidguys.com/wp-content/uploads/2017/12/Where-are-you.jpg");  
 }
 .container2{
     background-image: url("https://www.groovehq.com/blog/wp-content/uploads/2019/10/Feature-image-Lowering-prices@2x-790x490.png");
-    background-size: cover;
-    background-position: center;
+    
 }
 .container3{
     background-image: url("https://www.washingtonpost.com/wp-apps/imrs.php?src=https://arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/BZEMCNHX3UZQXPOKUSHJS22HKU.JPG&w=767");
-    background-size: cover;
-    background-position: center;
+    
 }
 .container4{
     background-image: url("https://i2.wp.com/www.mobileworldlive.com/wp-content/uploads/2019/05/social-media-apps-2-shutterstock-650-e1576686057538.jpg?fit=650%2C399&ssl=1");
-    background-size: cover;
-    background-position: center;
+    
 }
 .container5{
-    background-image: url("https://images.readwrite.com/wp-content/uploads/2019/08/Why-You-Love-Online-Quizzes-825x500.jpg");
-    background-size: cover;
-    background-position: center;
+    background-image: url("https://img.freepik.com/free-vector/quiz-neon-sign_1262-19629.jpg?size=626&ext=jpg");
+    background-size: 300px 250px;
+    background-repeat: no-repeat;
+  
+  
+ 
 }
 .container6{
-    background-image: url("http://www.bookperhead.com/wp-content/uploads/2017/11/pay-per-head-information.jpg");
-    background-size: contain;
-    background-position: center;
+    background-image: url("http://www.aljanh.net/data/archive/img/2404489385.png");
+    background-size: contain; 
+    background-repeat:no-repeat;
+
 }
 .container7{
     background-image: url("https://www-file.huawei.com/-/media/corporate/images/magazine/winwin/se5/07-03.jpg");
-    background-size: cover;
-    background-position: center;
+    
 }
 
 .container8{
     background-image: url("https://img.pngio.com/benefits-of-after-school-activities-for-children-kids-doing-an-art-activity-png-300_300.png");
-    background-size: cover;
-    background-position: center;
+    
+}
+
+.stripe{
+    background-color: green;
 }
